--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,4 +1,7 @@
 @import 'assets/scss/variables.scss';
 @import 'assets/scss/init-style.scss';
 
-@import 'assets/scss/overwrites/_tooltip.scss'
+@import 'assets/scss/overwrites/_chips.scss';
+@import 'assets/scss/overwrites/_form.scss';
+@import 'assets/scss/overwrites/_grid.scss';
+@import 'assets/scss/overwrites/_tooltip.scss';
