--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -30,20 +30,34 @@ $gray: #cdd3d8;
 $dark-gray: #75818b;
 $darker-gray: #6A6C66;
 $darkest-gray: #333333;
+$darkest-gray-border: #1d1d1d;
 
 $font-default: $darker-gray;
 
 /* WIDTH COLUMNS */
-$width-1: 100%;
-$width-2: 50%;
-$width-3: 33.33333%;
-$width-4: 25%;
-$width-5: 20%;
-$width-6: 16.666666667%;
-$width-7: 14.285714286%;
-$width-8: 12.5%;
-$width-9: 11.1%;
-$width-10: 10%;
+$width-1: 8.333333333%;
+$width-2: 16.66666667%;
+$width-3: 25%;
+$width-4: 33.33333333%;
+$width-5: 41.666666666667%;
+$width-6: 50%;
+$width-7: 58.333333333333%;
+$width-8: 66.666666666667%;
+$width-9: 75%;
+$width-10: 83.333333333333%;
+$width-11: 91.666666666667%;
+$width-12: 100%;
+
+$width-1-columns: 100%;
+$width-2-columns: 50%;
+$width-3-columns: 33.33333%;
+$width-4-columns: 25%;
+$width-5-columns: 20%;
+$width-6-columns: 16.666666667%;
+$width-7-columns: 14.285714286%;
+$width-8-columns: 12.5%;
+$width-9-columns: 11.1%;
+$width-10-columns: 10%;
 
 /* SIZE */
 $size-default: 12px;
