--- a/src/assets/scss/init-style.scss
+++ b/src/assets/scss/init-style.scss
@@ -25,6 +25,18 @@ body {
 
   h3 { font-size: 1.28rem; }
 
+  .flex-row { display: flex; flex-direction: row; }
+  .flex-column { display: flex; flex-direction: column; }
+  .flex-wrap { flex-wrap: wrap; }
+
+  .margin-top-none { margin-top: 0; }
+  .margin-top-1 { margin-top: 10px; }
+  .margin-top-2 { margin-top: 20px; }
+
+  .margin-right-none { margin-right: 0; }
+  .margin-right-1 { margin-right: 10px; }
+  .margin-right-2 { margin-right: 20px; }
+
   .rating-1 { background: $rating-1 }
   .rating-2 { background: $rating-2 }
   .rating-3 { background: $rating-3 }
@@ -33,8 +45,8 @@ body {
   .rating-6 { background: $rating-6 }
   .rating-7 { background: $rating-7 }
 
-  .category-movie { background: $color-movie; }
-  .category-serie { background: $color-serie; }
+  .type-movie { background: $color-movie; }
+  .type-serie { background: $color-serie; }
 }
 
 @media (min-width: 1460px) {
