--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -4,6 +4,8 @@ $black: #000000;
 $background: #282828;
 $header-background: #303030;
 
+$button-primary: #29BF44;
+
 $logo-yellow: #D3D94B;
 $logo-green: #29BF44;
 $logo-pink: #C132C0;
