--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -23,7 +23,7 @@ $rating-7: #7EBB6F;
 $color-serie: #F86C2F;
 $color-movie: #01C05D;
 
-$invalid-color: #FF0013;
+$invalid-color: #F44336;
 
 $lightest-gray: #F1F4F5;
 $lighter-gray: #E6EAEC;
