--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,11 @@
 <main class="main">
   <section class="filter-container flex-column">
     <div class="flex-row filter-icons col-md-12">
-      <div class="form-group flex-row form-prefix col-md-3 margin-right-2">
-        <input id="search" name="search" type="text" placeholder="Busca" [ngModel]="filters.search" />
-        <mat-icon class="icon-input">search</mat-icon>
-      </div>
+      <mat-form-field appearance="outline" class="col-md-3 margin-right-2">
+        <mat-label>Busca</mat-label>
+        <input matInput autocomplete="off">
+        <mat-icon matPrefix>search</mat-icon>
+      </mat-form-field>
       <div class="flex-row col-md-9 filters">
         <div class="icon-filters-container flex-row col-md-6">
           <mat-icon class="icon margin-right-1" matTooltip="Todos" [ngClass]="{'active': filters.exibition === 'all'}" (click)="setExibition('all')">public</mat-icon>
@@ -12,8 +13,8 @@
           <span class="divider margin-right-1"></span>
           <mat-icon class="icon filter-icon" matTooltip="Filtro" [ngClass]="{'active': filterOpened}" (click)="filterOpened = !filterOpened">filter_list</mat-icon>
         </div>
-        <button mat-button class="btn-default"  matTooltip="Nova indicação">
-            <mat-icon class="icon filter-icon">playlist_add</mat-icon> Nova indicação
+        <button mat-button class="btn-default"  matTooltip="Indicar" (click)="openDialog()">
+            <mat-icon class="icon filter-icon">playlist_add</mat-icon>
         </button>
       </div>
     </div>
@@ -22,16 +23,16 @@
       <div class="flex-row filter-options">
         <div class="form-group margin-right-2">
             <mat-chip-list>
-              <mat-chip *ngFor="let rating of ratings" class="chip-default {{rating.tag}}" [ngClass]="{'active': isRatingActive(rating.tag)}" (click)='updateRatingFilter(rating.tag)'>
-                {{rating.label}}
+              <mat-chip *ngFor="let rating of ratingArray" class="chip-default {{rating}}" [ngClass]="{'active': isRatingActive(rating)}" (click)='updateRatingFilter(rating)'>
+                {{rantingEnum[rating]}}
               </mat-chip>
             </mat-chip-list>
         </div>
         <span class="divider margin-right-2"></span>
         <div class="form-group">
             <mat-chip-list>
-              <mat-chip *ngFor="let type of types" class="chip-default {{type.tag}}" [ngClass]="{'active': isTypeActive(type.tag)}" (click)='updateTypeFilter(type.tag)'>
-                {{type.label}}
+              <mat-chip *ngFor="let type of typeArray" class="chip-default {{type}}" [ngClass]="{'active': isTypeActive(type)}" (click)='updateTypeFilter(type)'>
+                {{typeEnum[type]}}
               </mat-chip>
             </mat-chip-list>
         </div>
@@ -47,19 +48,19 @@
           <div class="poster-detail flex-column">
             <h3 class="poster-title">{{movie.name}}</h3>
 
-            <span class="poster-chip {{getClassType(movie.type)}}">{{movie.type}}</span>
+            <span class="poster-chip {{getClassType(movie.type)}}">{{typeEnum[movie.type]}}</span>
 
             <div class="rating-container flex-column">
               <span>Avaliação Média</span>
-              <span class="poster-chip {{getClassPoster(movie.averageRating)}}">{{movie.averageRating}}</span>
+              <span class="poster-chip {{getClassPoster(movie.averageRating)}}">{{rantingEnum[movie.averageRating]}}</span>
 
               <span>Última avaliação</span>
-              <span class="poster-chip {{getClassPoster(movie.lastRating)}}">{{movie.lastRating}}</span>
+              <span class="poster-chip {{getClassPoster(movie.lastRating)}}">{{rantingEnum[movie.lastRating]}}</span>
             </div>
 
             <div class="poster-actions flex-row">
-                <a href="#" matTooltip="Assistir depois" class="watch-later"><mat-icon>access_time</mat-icon></a>
-                <a href="#" matTooltip="Indicar {{movie.type}}" class="indicate-now"><mat-icon>playlist_add</mat-icon></a>
+                <a [routerLink]="" matTooltip="Assistir depois" class="watch-later"><mat-icon>access_time</mat-icon></a>
+                <a [routerLink]="" (click)="openDialog(movie.urlIndication)" matTooltip="Indicar {{movie.type}}" class="indicate-now"><mat-icon>playlist_add</mat-icon></a>
                 <a href="#" matTooltip="Mais informações" class="more-details"><mat-icon>arrow_forward</mat-icon></a>
             </div>
           </div>
