--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -3,6 +3,7 @@
 
 @import 'assets/scss/overwrites/_button.scss';
 @import 'assets/scss/overwrites/_chips.scss';
+@import 'assets/scss/overwrites/_dialog.scss';
 @import 'assets/scss/overwrites/_form.scss';
 @import 'assets/scss/overwrites/_grid.scss';
 @import 'assets/scss/overwrites/_tooltip.scss';
