--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="flex-row filter-icons col-md-12">
       <mat-form-field appearance="outline" class="col-md-3 margin-right-2">
         <mat-label>Busca</mat-label>
-        <input matInput autocomplete="off">
+        <input matInput autocomplete="off" (keyup)="updateList()">
         <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
       <div class="flex-row col-md-9 filters">
@@ -41,7 +41,7 @@
   </section>
 
   <section class="cards-container flex-row flex-wrap">
-    <div class="card {{getClassPoster(movie.averageRating)}}" *ngFor="let movie of movies">
+    <div class="card {{getClassPoster(movie.averageRating)}}" *ngFor="let movie of moviesList$ | async">
       <div class="poster-container">
         <img src="{{movie.urlPoster}}" class="img-poster">
         <div class="overlay">
