--- a/src/app/indicate/indicate.component.html
+++ b/src/app/indicate/indicate.component.html
@@ -22,7 +22,7 @@
     <div class="flex-row col-md-12">
       <mat-form-field appearance="outline" class="col-md-12">
         <mat-label>Comentário</mat-label>
-        <textarea matInput formControlName='commentary'></textarea>
+        <textarea matInput formControlName='comment'></textarea>
       </mat-form-field>
     </div>
 
