--- a/src/app/indicate/indicate.component.html
+++ b/src/app/indicate/indicate.component.html
@@ -1,7 +1,7 @@
 <h2 class="title-modal">Nova Indicação</h2>
 
 <div class="container">
-  <form novalidate [formGroup]="formGroup" (submit)="teste()">
+  <form novalidate [formGroup]="formGroup" (submit)="saveIndication()">
     <div class="flex-row col-md-12">
       <mat-form-field appearance="outline" class="col-md-8 margin-right-1 dialog-input-prefix">
         <mat-label>Link IMDb/TMDb</mat-label>
