--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $black: #000000;
 $background: #282828;
 $header-background: #303030;
+$background-facebook: #4267B2;
 
 $button-primary: #29BF44;
 
