--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,3 @@
-<p>
-  login works!
-</p>
+<div class="login-container">
+  <button class="btn btn-facebook"><img src="assets/img/facebook.png" height="25px"> <span>Entrar com o Facebook</span></button>
+</div>
