--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -4,6 +4,7 @@ $black: #000000;
 $background: #282828;
 $header-background: #303030;
 $background-facebook: #4267B2;
+$background-facebook-hover:  #2d467b;
 
 $button-primary: #29BF44;
 
