--- a/src/app/main-components/header/header.component.html
+++ b/src/app/main-components/header/header.component.html
@@ -4,8 +4,11 @@
       <img src="assets/img/header-logo.png">
     </div>
     <div class="header-settings">
-      <div class="profile-image">
+      <div class="profile-image" *ngIf="isLogged">
         <img src="assets/img/user.jpg">
+      </div>
+      <div class="signIn-container">
+        <span (click)="openDialog(0)">Entrar</span> ou <span (click)="openDialog(1)">Cadastrar</span>
       </div>
     </div>
   </div>
