--- a/src/assets/scss/init-style.scss
+++ b/src/assets/scss/init-style.scss
@@ -30,10 +30,15 @@ body {
   .flex-row { display: flex; flex-direction: row; }
   .flex-column { display: flex; flex-direction: column; }
   .flex-wrap { flex-wrap: wrap; }
+  .align-items-center { align-items: center; }
 
   .margin-top-none { margin-top: 0; }
   .margin-top-1 { margin-top: 10px; }
   .margin-top-2 { margin-top: 20px; }
+
+  .margin-bottom-none { margin-bottom: 0; }
+  .margin-bottom-1 { margin-bottom: 10px; }
+  .margin-bottom-2 { margin-bottom: 20px; }
 
   .margin-right-none { margin-right: 0; }
   .margin-right-1 { margin-right: 10px; }
