--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -6,4 +6,5 @@
 @import 'assets/scss/overwrites/_dialog.scss';
 @import 'assets/scss/overwrites/_form.scss';
 @import 'assets/scss/overwrites/_grid.scss';
+@import 'assets/scss/overwrites/_tab.scss';
 @import 'assets/scss/overwrites/_tooltip.scss';
