--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,5 +68,6 @@
       </div>
     </div>
     <app-loading *ngIf="(loading$ | async)"></app-loading>
+    <button class="scroll-btn" [ngClass]="{'active': scollTopActive}" (click)="scollTop()"><mat-icon>arrow_upward</mat-icon></button>
   </section>
 </main>
