--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,3 +1,5 @@
+@import '~ngx-toastr/toastr.css';
+
 @import 'assets/scss/variables.scss';
 @import 'assets/scss/init-style.scss';
 
@@ -7,4 +9,5 @@
 @import 'assets/scss/overwrites/_form.scss';
 @import 'assets/scss/overwrites/_grid.scss';
 @import 'assets/scss/overwrites/_tab.scss';
+@import 'assets/scss/overwrites/_toast.scss';
 @import 'assets/scss/overwrites/_tooltip.scss';
