--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -52,7 +52,8 @@
     }
   }
   .cards-container {
-    width: 100%;
+    width: calc(100% + 30px);
+    margin: 0 -15px;
 
     .card {
       position: relative;
@@ -116,9 +117,10 @@
 
               .poster-chip {
                 display: block;
+                margin-top: 5px;
 
                 &:nth-child(2) {
-                  margin-bottom: 10px;
+                  margin-bottom: 15px;
                 }
 
               }
