--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <main class="main">
   <section class="filter-container flex-column">
     <div class="flex-row filter-icons col-md-12">
-      <mat-form-field appearance="outline" class="col-md-3 margin-right-2">
+      <mat-form-field appearance="outline" class="col-md-3 col-sm-12 margin-right-2">
         <mat-label>Busca</mat-label>
         <input matInput autocomplete="off" (keyup)="updateList()">
         <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
-      <div class="flex-row col-md-9 filters">
+      <div class="flex-row col-md-9 col-sm-12 filters">
         <div class="icon-filters-container flex-row col-md-6">
           <mat-icon class="icon margin-right-1" matTooltip="Todos" [ngClass]="{'active': filters.exibition === 'all'}" (click)="setExibition('all')">public</mat-icon>
           <mat-icon class="icon margin-right-1" matTooltip="Seguindo" [ngClass]="{'active': filters.exibition === 'group'}" (click)="setExibition('group')">group</mat-icon>
