--- a/src/app/indicate/indicate.component.html
+++ b/src/app/indicate/indicate.component.html
@@ -3,14 +3,14 @@
 <div class="container">
   <form novalidate [formGroup]="formGroup" (submit)="saveIndication()">
     <div class="flex-row col-md-12">
-      <mat-form-field appearance="outline" class="col-md-8 margin-right-1 dialog-input-prefix">
+      <mat-form-field appearance="outline" class="col-md-8 col-sm-12 margin-right-1 dialog-input-prefix">
         <mat-label>Link IMDb/TMDb</mat-label>
         <input matInput autocomplete="off" formControlName='url'
           placeholder="http://www.imdb.com/title/exemple ou https://www.themoviedb.org/movie/exemple">
         <mat-icon matPrefix>link</mat-icon>
       </mat-form-field>
 
-      <mat-form-field appearance="outline" class="col-md-4">
+      <mat-form-field appearance="outline" class="col-md-4 col-sm-12">
           <mat-label>Avaliação</mat-label>
         <mat-select panelClass="panel-dark" formControlName='rating'>
           <mat-option *ngFor="let rating of ratingArray" [value]="rating">
@@ -20,7 +20,7 @@
       </mat-form-field>
     </div>
     <div class="flex-row col-md-12">
-      <mat-form-field appearance="outline" class="col-md-12">
+      <mat-form-field appearance="outline" class="col-md-12 col-sm-12">
         <mat-label>Comentário</mat-label>
         <textarea matInput formControlName='comment'></textarea>
       </mat-form-field>
