--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,16 +7,16 @@
       <mat-tab label="Login">
         <ng-container *ngIf="!isForgetPassword">
           <form novalidate [formGroup]="formSignIn" (submit)="signIn()">
-            <div class="flex-row col-md-12">
-              <mat-form-field appearance="outline" class="col-md-12 dialog-input-prefix">
+            <div class="flex-row col-md-12 col-sm-12">
+              <mat-form-field appearance="outline" class="col-md-12 col-sm-12 dialog-input-prefix">
                 <mat-label>E-mail</mat-label>
                 <input matInput autocomplete="off" formControlName='email'
                   placeholder="email@email.com.br">
                 <mat-icon matPrefix>email</mat-icon>
               </mat-form-field>
             </div>
-            <div class="flex-column col-md-12">
-              <mat-form-field appearance="outline" class="col-md-12 dialog-input-prefix">
+            <div class="flex-column col-md-12 col-sm-12">
+              <mat-form-field appearance="outline" class="col-md-12 col-sm-12 dialog-input-prefix">
                 <mat-label>Senha</mat-label>
                 <input matInput type="password" formControlName='password'>
                 <mat-icon matPrefix>lock</mat-icon>
@@ -25,24 +25,24 @@
                 <span (click)="setForgetPassword()">Esqueceu sua senha?</span>
               </div>
             </div>
-            <div class="flex-row col-md-12 margin-top-1">
-              <button mat-button cdkFocusInitial class="btn-default col-md-12" type="submit">Entrar</button>
+            <div class="flex-row col-md-12 col-sm-12 margin-top-1">
+              <button mat-button cdkFocusInitial class="btn-default col-md-12 col-sm-12" type="submit">Entrar</button>
             </div>
           </form>
         </ng-container>
 
         <ng-container *ngIf="isForgetPassword">
           <form novalidate [formGroup]="formForgetPassword" (submit)="forgetPassword()">
-            <div class="flex-row col-md-12">
-              <mat-form-field appearance="outline" class="col-md-12 dialog-input-prefix">
+            <div class="flex-row col-md-12 col-sm-12">
+              <mat-form-field appearance="outline" class="col-md-12 col-sm-12 dialog-input-prefix">
                 <mat-label>E-mail</mat-label>
                 <input matInput autocomplete="off" formControlName='email'
                   placeholder="email@email.com.br">
                 <mat-icon matPrefix>email</mat-icon>
               </mat-form-field>
             </div>
-            <div class="flex-column align-items-center col-md-12 margin-top-1">
-              <button mat-button cdkFocusInitial class="btn-default col-md-12" type="submit">Enviar e-mail</button>
+            <div class="flex-column align-items-center col-md-12 col-sm-12 margin-top-1">
+              <button mat-button cdkFocusInitial class="btn-default col-md-12 col-sm-12" type="submit">Enviar e-mail</button>
               <button mat-button class="col-md-5 margin-top-1" (click)="setForgetPassword()">Voltar</button>
             </div>
           </form>
@@ -50,30 +50,30 @@
       </mat-tab>
       <mat-tab label="Cadastrar">
         <form novalidate [formGroup]="formRegister" (submit)="register()">
-          <div class="flex-row col-md-12">
-            <mat-form-field appearance="outline" class="col-md-12 dialog-input-prefix">
+          <div class="flex-row col-md-12 col-sm-12">
+            <mat-form-field appearance="outline" class="col-md-12 col-sm-12 dialog-input-prefix">
               <mat-label>Nome</mat-label>
               <input matInput autocomplete="off" formControlName='name'>
               <mat-icon matPrefix>perm_identity</mat-icon>
             </mat-form-field>
           </div>
-          <div class="flex-row col-md-12">
-            <mat-form-field appearance="outline" class="col-md-12 dialog-input-prefix">
+          <div class="flex-row col-md-12 col-sm-12">
+            <mat-form-field appearance="outline" class="col-md-12 col-sm-12 dialog-input-prefix">
               <mat-label>E-mail</mat-label>
               <input matInput autocomplete="off" formControlName='email'
                 placeholder="email@email.com.br">
               <mat-icon matPrefix>email</mat-icon>
             </mat-form-field>
           </div>
-          <div class="flex-column col-md-12">
-            <mat-form-field appearance="outline" class="col-md-12 dialog-input-prefix">
+          <div class="flex-column col-md-12 col-sm-12">
+            <mat-form-field appearance="outline" class="col-md-12 col-sm-12 dialog-input-prefix">
               <mat-label>Senha</mat-label>
               <input matInput type="password" formControlName='password'>
               <mat-icon matPrefix>lock</mat-icon>
             </mat-form-field>
           </div>
-          <div class="flex-row col-md-12 margin-top-1">
-            <button mat-button cdkFocusInitial class="btn-default col-md-12" type="submit">Cadastrar</button>
+          <div class="flex-row col-md-12 col-sm-12 margin-top-1">
+            <button mat-button cdkFocusInitial class="btn-default col-md-12 col-sm-12" type="submit">Cadastrar</button>
           </div>
         </form>
       </mat-tab>
