--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,8 +40,8 @@
     </div>
   </section>
 
-  <section class="cards-container flex-row flex-wrap" [@listStagger]='(moviesList$ | async).length'>
-    <div class="card {{getClassPoster(movie.average_rating)}}" *ngFor="let movie of moviesList$ | async">
+  <section class="cards-container flex-row flex-wrap" [@listStagger]='moviesList?.length'>
+    <div class="card {{getClassPoster(movie.average_rating)}}" *ngFor="let movie of moviesList">
       <div class="poster-container">
         <div class="img-poster" [ngStyle]="{'background-image': 'url(' + movie.poster_path + ')'}"></div>
         <div class="overlay">
@@ -67,7 +67,7 @@
         </div>
       </div>
     </div>
-    <app-loading *ngIf="(loading$ | async)"></app-loading>
+    <app-loading *ngIf="!isLoaded"></app-loading>
     <button class="scroll-btn" [ngClass]="{'active': scollTopActive}" (click)="scollTop()"><mat-icon>arrow_upward</mat-icon></button>
   </section>
 </main>
