--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <div class="social-login margin-bottom-2">
-    <button class="btn btn-facebook margin-bottom-2"><img src="assets/img/facebook.png" height="25px"> <span>Entrar com o Facebook</span></button>
+    <button class="btn btn-facebook margin-bottom-2" (click)="loginFacebook()"><img src="assets/img/facebook.png" height="25px"> <span>Entrar com o Facebook</span></button>
   </div>
   <div class="manual-login">
     <mat-tab-group class="tab-login" animationDuration="1500ms" [selectedIndex]="tabActive">
