--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
 <app-header></app-header>
 <router-outlet></router-outlet>
+<app-loading class="global-loading" *ngIf="(loadingProfile$ | async) || this.loading"></app-loading>
 
