--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 
+{{(loadingProfile$ | async) + ' - ' + (loadingLogin$ | async) + ' - ' + (loadingToken$ | async) + ' - ' + loading}}
+
 <app-header></app-header>
 <router-outlet></router-outlet>
-<app-loading class="global-loading" *ngIf="(loadingProfile$ | async) || (loadingLogin$ | async) || loading"></app-loading>
+
+<app-loading class="global-loading"
+*ngIf="(loadingProfile$ | async) || (loadingLogin$ | async) || (loadingToken$ | async) || loading"></app-loading>
 
