--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 
-{{(loadingProfile$ | async) + ' - ' + (loadingLogin$ | async) + ' - ' + (loadingToken$ | async) + ' - ' + loading}}
+{{(loadingProfile$ | async) + ' - ' + (loadingLogin$ | async) + ' - ' + (loadingToken$ | async)}}
 
 <app-header></app-header>
 <router-outlet></router-outlet>
 
 <app-loading class="global-loading"
-*ngIf="(loadingProfile$ | async) || (loadingLogin$ | async) || (loadingToken$ | async) || loading"></app-loading>
+*ngIf="(loadingProfile$ | async) || (loadingLogin$ | async) || (loadingToken$ | async)"></app-loading>
 
