List request with filter added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,8 +31,8 @@
         <span class="divider margin-right-2"></span>
         <div class="form-group">
             <mat-chip-list>
-              <mat-chip *ngFor="let type of typeArray" class="chip-default {{type}}" [ngClass]="{'active': isTypeActive(type)}" (click)='updateTypeFilter(type)'>
-                {{typeEnum[type]}}
+              <mat-chip *ngFor="let category of categoryArray" class="chip-default {{category}}" [ngClass]="{'active': isCategoryActive(category)}" (click)='updateCategoryFilter(category)'>
+                {{categoryEnum[category]}}
               </mat-chip>
             </mat-chip-list>
         </div>
@@ -48,7 +48,7 @@
           <div class="poster-detail flex-column">
             <h3 class="poster-title">{{movie.original_title}}</h3>
 
-            <span class="poster-chip {{utils.getClassType(movie.category)}}">{{typeEnum[movie.category]}}</span>
+            <span class="poster-chip {{utils.getClassCategory(movie.category)}}">{{categoryEnum[movie.category]}}</span>
 
             <div class="rating-container flex-column">
               <span>Avaliação Média</span>
@@ -60,7 +60,7 @@
 
             <div class="poster-actions flex-row">
                 <a [routerLink]="" matTooltip="Assistir depois" class="watch-later"><mat-icon>access_time</mat-icon></a>
-                <a [routerLink]="" (click)="openDialog(movie.urlIndication)" matTooltip="Indicar {{typeEnum[movie.type]}}" class="indicate-now"><mat-icon>playlist_add</mat-icon></a>
+                <a [routerLink]="" (click)="openDialog(movie.urlIndication)" matTooltip="Indicar {{categoryEnum[movie.category]}}" class="indicate-now"><mat-icon>playlist_add</mat-icon></a>
                 <a href="#" matTooltip="Mais informações" class="more-details"><mat-icon>arrow_forward</mat-icon></a>
             </div>
           </div>
