--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="flex-row filter-icons col-md-12">
       <mat-form-field appearance="outline" class="col-md-3 col-sm-12 margin-right-2">
         <mat-label>Busca</mat-label>
-        <input matInput autocomplete="off" (keyup)="updateList()">
+        <input matInput autocomplete="off" (keyup)="updateList()" [(ngModel)]="filters.search">
         <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
       <div class="flex-row col-md-9 col-sm-12 filters">
@@ -46,7 +46,7 @@
         <div class="img-poster" [ngStyle]="{'background-image': 'url(' + movie.poster_path + ')'}"></div>
         <div class="overlay">
           <div class="poster-detail flex-column">
-            <h3 class="poster-title">{{movie.original_title}}</h3>
+            <h3 class="poster-title">{{movie.original_title}} ({{movie.year}})</h3>
 
             <span class="poster-chip {{utils.getClassCategory(movie.category)}}">{{categoryEnum[movie.category]}}</span>
 
@@ -70,4 +70,5 @@
     <app-loading [hidden]="isLoaded"></app-loading>
     <button class="scroll-btn" [ngClass]="{'active': scollTopActive}" (click)="scollTop()"><mat-icon>arrow_upward</mat-icon></button>
   </section>
+  <app-empty *ngIf="moviesList && !moviesList.length && isLoaded" [msg]="msg"></app-empty>
 </main>
