--- a/src/app/indicate/indicate.component.html
+++ b/src/app/indicate/indicate.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <div mat-dialog-actions>
-      <button mat-button (click)="onNoClick()">Cancelar</button>
+      <button mat-button (click)="onNoClick()" type="button">Cancelar</button>
       <button mat-button cdkFocusInitial class="btn-default" type="submit">
         <mat-icon class="icon filter-icon">playlist_add</mat-icon> Indicar
       </button>
