--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header id="header"></app-header>
 <router-outlet></router-outlet>
 
 <app-loading class="global-loading"
